polski opis do placeholder

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <p class="singup-title">
                     Obiecujemy skontaktować się z tobą tylko RAZ!:
                 </p><br>
-                <input class="input-email" type="email" placeholder="Your email...." name="email">
+                <input class="input-email" type="email" placeholder="Twój email...." name="email">
                 <input type="hidden" name="receiver" value="wildmanblues@op.pl">
                 <input class="button-for-form-subskribe" type="submit" value="Wyślij">
             </form>
