poprawa pozycjonowania sekcji features

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                 Pomożemy szybko tworzyć i zarządzać listami zakupów w wygodny sposób.
             </p>
         </div>
+        <div class="features-feature-clear" ></div>
     </section>
     <section id="singup">
         <div class="signup">
