--- a/index.html
+++ b/index.html
@@ -94,11 +94,18 @@
             <form action="http://tools.is-academy.pl/mailer.php" method="post">
                 <p class="singup-title">
                     Obiecujemy skontaktować się z tobą tylko RAZ!:
-                </p><br>
+                </p>
+                <p>Zostaw swoj email, a powiadomimy Cie o premierze naszej aplikacji</p>
                 <input class="input-email" type="email" placeholder="Twój email...." name="email">
                 <input type="hidden" name="receiver" value="wildmanblues@op.pl">
                 <input class="button-for-form-subskribe" type="submit" value="Wyślij">
-            </form>
+            </form><br>
+
+            <div class="declaration">Zgodnie z art. 24 ust. 1 ustawy z dnia 29
+                sierpnia z dnia 29 sierpnia 1997 r. o ochronie danych osobowych
+                (t.j. Dz. U. z 2015 r., poz. 2135 z późn. zm) informujemy, iż administratorem
+                danych jest:..
+            </div>
         </div>
     </section>
 
