--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <div class="slogan" style="">
             <h1>
-                Wybierzesz najlepsze produkty ekologiczne
+                TEREFERE Wybierzesz najlepsze produkty ekologiczne
             </h1>
             <p>
                 Nie ruszając się z domu. Nigdy nie było to takie proste!
