--- a/index.html
+++ b/index.html
@@ -208,22 +208,19 @@
         $(window).scroll(function () {
             var position = $(this).scrollTop();
 
-            console.log('position')
-            console.log(position)
             $('.section').each(function () {
-                var target = $(this).offset().top;
-                console.log('target')
-                console.log(target)
+                var target = $(this).offset().top-20;
+
                 var id = $(this).attr('id');
 
                 if (position >= target) {
-                    console.log('cos')
                     $('#navigation > ul > li > a').removeClass('active');
                     $('#navigation > ul > li > a[href=#' + id + ']').addClass('active');
                 }
             })
 
         });
+
     });
 
 </script>
