blocked function when user introduced wrong email ("without @") - script game.jss attached to index.html - scss game attached to main.scss

--- a/index.html
+++ b/index.html
@@ -107,38 +107,13 @@
                 (t.j. Dz. U. z 2015 r., poz. 2135 z późn. zm) informujemy, iż administratorem
                 danych jest:..
             </div>
-
-
-
             <!-- The Modal -->
             <div id="myModal" class="modal">
-
                 <!-- Modal content -->
                 <div class="modal-content">
                     <span class="close">×</span>
                     <table>TABELA Z GRA</table>
                 </div>
-                <script>
-                    // definiujemy okienko modalne
-                    var modal = document.getElementById('myModal');
-
-                    // button dla okienka modalnego
-                    var btn = document.getElementById("myBtn");
-
-                    // klasa<span> zamykajaca (x) okienko
-                    var span = document.getElementsByClassName("close")[0];
-
-                    // gdy uzytkownik kliknie button otworzy okno
-                    btn.onclick = function() {
-                        modal.style.display = "block";
-                    }
-
-                    // klikniecie w spana (z) zamkniecie okienka
-                    span.onclick = function() {
-                        modal.style.display = "none";
-                    }
-
-                </script>
 
             </div>
         </div>
@@ -280,5 +255,6 @@
 </script>
 
 <script src="script/team-rotation.js" ></script>
+<script src="script/game.js" ></script>
 </body>
 </html>
