struktura strony i komentarze       background color       footer responsywny aa       button/ font - update 2      Footer - SASS - responsive

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="pl" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width initial-scale=1">
@@ -154,53 +154,92 @@
     </section>
 </main>
 <footer>
-    <div id="footer-poznajmy-text">
+    <div class="footer-poznajmy-text">
         <h1>
             Poznajmy się
         </h1>
     </div>
-    <div id="footer-kontakt-text">
+    <div class="footer-kontakt-text">
         <h1>Kontakt</h1>
     </div>
     <div style="clear: both"></div>
-    <div id="footer-socials-text">
-        <a href="https://facebook.com" class="footer-social-icons" target="_blank">
-            <div id="footer-facebook-icon">
-                <i class="icon-facebook"></i>
+    <div class="footer-socials-text">
+        <div class="socials-left-side">
+            <div class="footer-dropdownmenu">
+                <button class="footer-dropdownmenu-button">
+                    <img src="images/iconmonstr-sort-10.png" style="width: 70px; height: 70px;">
+                </button>
+                <div class="footer-dropdownmenu-content">
+                    <a href="https://facebook.com" class="footer-social-icons" target="_blank">
+                        <div class="footer-facebook-icon">
+                            <i class="icon-facebook"></i>
+                        </div>
+                    </a>
+                    <a href="htps://googleplus.com" class="footer-social-icons" target="_blank">
+                        <div class="footer-googleplus-icon">
+                            <i class="icon-googleplus"></i>
+                        </div>
+                    </a>
+                    <a href="https://www.instagram.com" class="footer-social-icons" target="_blank">
+                        <div class="footer-instagram-icon">
+                            <i class="icon-instagram"></i>
+                        </div>
+                    </a>
+                    <a href="https://youtube.pl" class="footer-social-icons" target="_blank">
+                        <div class="footer-youtube-icon">
+                            <i class="icon-youtube"></i>
+                        </div>
+                    </a>
+                </div>
+                </button>
             </div>
-        </a>
-        <a href="htps://googleplus.com" class="footer-social-icons" target="_blank">
-            <div id="footer-googleplus-icon">
-                <i class="icon-googleplus"></i>
+        <div class="no-button">
+            <div class="footer-socials-text">
+                <div class="socials-left-side">
+                    <a href="https://facebook.com" class="footer-social-icons" target="_blank">
+                        <div class="footer-facebook-icon">
+                            <i class="icon-facebook"></i>
+                        </div>
+                    </a>
+                    <a href="htps://googleplus.com" class="footer-social-icons" target="_blank">
+                        <div class="footer-googleplus-icon">
+                            <i class="icon-googleplus"></i>
+                        </div>
+                    </a>
+                    <a href="https://www.instagram.com" class="footer-social-icons" target="_blank">
+                        <div class="footer-instagram-icon">
+                            <i class="icon-instagram"></i>
+                        </div>
+                    </a>
+                    <a href="https://youtube.pl" class="footer-social-icons" target="_blank">
+                        <div class="footer-youtube-icon">
+                            <i class="icon-youtube"></i>
+                        </div>
+                    </a>
+                </div>
             </div>
-        </a>
-        <a href="https://www.instagram.com" class="footer-social-icons" target="_blank">
-            <div id="footer-instagram-icon">
-                <i class="icon-instagram"></i>
-            </div>
-        </a>
-        <a href="https://youtube.pl" class="footer-social-icons" target="_blank">
-            <div id="footer-youtube-icon">
-                <i class="icon-youtube"></i>
-            </div>
-        </a>
-        <a href="mailto:frontreact@infoshareacadey.pl?Subject=Hello%20again" class="footer-social-icons" target="_blank" style="float: right">
-            <div id="footer-gmail-icon">
-                <i class="icon-gmail"></i>
-            </div>
-        </a>
+        </div>
+
+        <div class="socials-right-side">
+            <a href="mailto:frontreact@infoshareacadey.pl?Subject=Hello%20again" class="footer-social-icons" target="_blank" style="float: right">
+                <div class="footer-gmail-icon">
+                    <i class="icon-gmail"></i>
+                </div>
+            </a>
+        </div>
         <div style="clear: both"></div>
+
+        <div class="footer-credits" style="clear: both">
+            <p>
+                © Copyright 2016
+            </p>
+            <p>
+                Wszystkie prawa zastrzeżone. Wszystkie teksty, zdjęcia, grafika, ścieżki dźwiękowe, wideo i animacji danych jak również ich skład lub układ są chronione prawami autorskimi i innymi prawami ochronnymi. Ich zawartość nie mogą być kopiowane do celów komercyjnych lub innych, ani nie może on być wyświetlany, nawet w zmodyfikowanej wersji na innych stronach internetowych.
+            </p>
+        </div>
     </div>
-    <div id="footer-credits" style="clear: both">
-        <p>
-            © Copyright 2016
-        </p>
-        <p>
-            Wszystkie prawa zastrzeżone. Wszystkie teksty, zdjęcia, grafika, ścieżki dźwiękowe, wideo i animacji danych jak również ich skład lub układ są chronione prawami autorskimi i innymi prawami ochronnymi. Ich zawartość nie mogą być kopiowane do celów komercyjnych lub innych, ani nie może on być wyświetlany, nawet w zmodyfikowanej wersji na innych stronach internetowych.
-        </p>
     </div>
 </footer>
-
 <script src="styles/lib/jquery-2.1.4.min.js"></script>
 
 <script>
