--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/fontello.css">
     <link href="https://fonts.googleapis.com/css?family=Lato&subset=latin-ext" rel="stylesheet">
 </head>
-<body>
+<body onload="gameLoop()">
 <header>
     <nav class="navigation-nav" id="navigation">
         <ul class="navigation-ul">
@@ -118,6 +118,7 @@
             </div>
         </div>
     </section>
+
 
     <section id="team" class="section">
         <header class="team-header">Zespół</header>
