struktura strony i komentarze       background color       footer responsywny aa       button/ font - update 2      Footer - SASS - responsive      Slider - nearly finish

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="pl" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width initial-scale=1">
@@ -121,8 +121,10 @@
     <section id="singup" class="section">
         <div class="signup">
             <form action="http://tools.is-academy.pl/mailer.php" method="post">
-                <p class="singup-title">Zostaw swój email, a powiadomimy Cię o premierze naszej aplikacji</p>
-                <p>Obiecujemy skontaktować się z tobą tylko RAZ!:</p>
+                <p class="singup-title">
+                    Obiecujemy skontaktować się z tobą tylko RAZ!:
+                </p>
+                <p>Zostaw swoj email, a powiadomimy Cie o premierze naszej aplikacji</p>
                 <input class="input-email" type="email" placeholder="Twój email...." name="email">
                 <input type="hidden" name="receiver" value="wildmanblues@op.pl">
                 <input class="button-for-form-subskribe" type="submit" value="Wyślij">
@@ -238,8 +240,8 @@
                         </div>
                     </a>
                 </div>
+                </button>
             </div>
-        </div>
         <div class="no-button">
             <div class="footer-socials-text">
                 <div class="socials-left-side">
@@ -284,6 +286,7 @@
                 Wszystkie prawa zastrzeżone. Wszystkie teksty, zdjęcia, grafika, ścieżki dźwiękowe, wideo i animacji danych jak również ich skład lub układ są chronione prawami autorskimi i innymi prawami ochronnymi. Ich zawartość nie mogą być kopiowane do celów komercyjnych lub innych, ani nie może on być wyświetlany, nawet w zmodyfikowanej wersji na innych stronach internetowych.
             </p>
         </div>
+    </div>
     </div>
 </footer>
 <script>
