--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width initial-scale=1">
     <title>Sugero.pl</title>
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="script/game1.css">
     <link rel="stylesheet" href="styles/fontello.css">
     <link href="https://fonts.googleapis.com/css?family=Lato&subset=latin-ext" rel="stylesheet">
 </head>
@@ -97,7 +98,7 @@
                     Obiecujemy skontaktować się z tobą tylko RAZ!:
                 </p>
                 <p>Zostaw swoj email, a powiadomimy Cie o premierze naszej aplikacji</p>
-                <input class="input-email" type="email" placeholder="Twój email...." name="email">
+                <input class="<div>" type="email" placeholder="Twój email...." name="email">
                 <input type="hidden" name="receiver" value="wildmanblues@op.pl">
                 <input class="button-for-form-subskribe" id="myBtn" type="submit" value="Wyślij">
             </form><br>
@@ -107,16 +108,17 @@
                 (t.j. Dz. U. z 2015 r., poz. 2135 z późn. zm) informujemy, iż administratorem
                 danych jest:..
             </div>
-            <!-- The Modal -->
-            <div id="myModal" class="modal">
-                <!-- Modal content -->
-                <div class="modal-content">
+
+                <div id="game-start">
                     <span class="close">×</span>
-                    <table>TABELA Z GRA</table>
+                    <h1 id="game-title"> Zbierz jak największą ilość produktów</h1>
+                    <h2 id="game-title-2"> Aby zacząć wciśnij 'START'</h2>
+                    <input id="game-button" type="submit" value="START">
+                    <p id="game-instruction"> Instrukcja </p>
                 </div>
 
-            </div>
         </div>
+
     </section>
 
     <section id="team" class="section">
