wypozocjonowanie diva z gra

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </section>
     <section id="singup" class="section">
         <div class="signup">
-            <form action="http://tools.is-academy.pl/mailer.php" method="post">
+            <form action="http://tools.is-academy.pl/mailer.php" method="post" >
                 <p class="singup-title">
                     Obiecujemy skontaktować się z tobą tylko RAZ!:
                 </p>
@@ -108,18 +108,19 @@
                 (t.j. Dz. U. z 2015 r., poz. 2135 z późn. zm) informujemy, iż administratorem
                 danych jest:..
             </div>
-
+            <div id="game-container">
                 <div id="game-start">
                     <span class="close">×</span>
                     <h1 id="game-title"> Zbierz jak największą ilość produktów</h1>
                     <h2 id="game-title-2"> Aby zacząć wciśnij 'START'</h2>
                     <input id="game-button" type="submit" value="START">
                     <p id="game-instruction"> Instrukcja </p>
+                    <img id="game-arrow" src="images/arrows.png" >
                 </div>
-
+            </div>
         </div>
-
     </section>
+
 
     <section id="team" class="section">
         <header class="team-header">Zespół</header>
