--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/fontello.css">
     <link href="https://fonts.googleapis.com/css?family=Lato&subset=latin-ext" rel="stylesheet">
     <script src="styles/lib/jquery-2.1.4.min.js"></script>
+
 </head>
 <body>
 <header>
@@ -288,78 +289,7 @@
     });
 
 </script>
-<script>
-
-    var currentSlide = 1,
-            invtervalId ;
-
-    function showSlide(currentSlide) {
-        $(".slide").hide();
-        $("#slide_" + currentSlide).fadeIn();
-    }
-
-    function prevSlide(){
-        currentSlide--;
-
-        if (currentSlide === 0)
-            currentSlide = 5;
-
-        showSlide(currentSlide);
-    }
-
-    function nextSlide(){
-        currentSlide++;
-
-        if (currentSlide === 6)
-            currentSlide = 1;
-
-        showSlide(currentSlide);
-
-    }
-    function startSlider() {
-        intervalId = setInterval(nextSlide, 5000);
-    }
-    function stopSlider() {
-        clearInterval(intervalId);
-    }
-
-    $("#slider-button-top_0").click(function () {
-        stopSlider();
-    });
-    $("#slider-button-top_1").click(function () {
-        showSlide(1);
-    });
-    $("#slider-button-top_2").click(function () {
-        showSlide(2);
-    });
-    $("#slider-button-top_3").click(function () {
-        showSlide(3);
-    });
-    $("#slider-button-top_4").click(function () {
-        showSlide(4);
-    });
-    $("#slider-button-top_5").click(function () {
-        showSlide(5);
-    });
-    $("#slider-button-top_6").click(function(){
-        startSlider();
-    });
-
-
-    $("#slider-button-left-pic").click(function () {
-        prevSlide();
-    });
-
-
-    $("#slider-button-right-pic").click(function () {
-
-        nextSlide();
-    });
-
-    startSlider();
-
-
-</script>
+<script src="styles/lib/slider.js"></script>
 
 </body>
 </html>
