struktura strony i komentarze       background color       footer responsywny aa       button/ font - update 2      Footer - SASS - responsive      Slider - nearly finish      FINISH??

--- a/index.html
+++ b/index.html
@@ -116,15 +116,12 @@
                 Pomożemy szybko tworzyć i zarządzać listami zakupów w wygodny sposób.
             </p>
         </div>
-        <div class="features-feature-clear" ></div>
     </section>
     <section id="singup" class="section">
         <div class="signup">
             <form action="http://tools.is-academy.pl/mailer.php" method="post">
-                <p class="singup-title">
-                    Obiecujemy skontaktować się z tobą tylko RAZ!:
-                </p>
-                <p>Zostaw swoj email, a powiadomimy Cie o premierze naszej aplikacji</p>
+                <p class="singup-title">Zostaw swój email, a powiadomimy Cię o premierze naszej aplikacji</p>
+                <p>Obiecujemy skontaktować się z tobą tylko RAZ!:</p>
                 <input class="input-email" type="email" placeholder="Twój email...." name="email">
                 <input type="hidden" name="receiver" value="wildmanblues@op.pl">
                 <input class="button-for-form-subskribe" type="submit" value="Wyślij">
@@ -240,8 +237,8 @@
                         </div>
                     </a>
                 </div>
-                </button>
             </div>
+        </div>
         <div class="no-button">
             <div class="footer-socials-text">
                 <div class="socials-left-side">
@@ -289,6 +286,9 @@
     </div>
     </div>
 </footer>
+
+<script src="styles/lib/jquery-2.1.4.min.js"></script>
+
 <script>
     $(document).ready(function () {
         $(window).scroll(function () {
