struktura strony i komentarze       background color       footer responsywny aa       button/ font - update 2      Footer - SASS - responsive      Slider - nearly finish      FINISH

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navigation-nav" id="navigation">
         <ul class="navigation-ul">
             <li class="navigation">
-                <a class="navigation" href="#slider-buttons-top">
+                <a class="navigation" href="#slideShow">
                     Start
                 </a>
             </li>
@@ -286,9 +286,6 @@
         </div>
     </div>
 </footer>
-
-<script src="styles/lib/jquery-2.1.4.min.js"></script>
-
 <script>
     $(document).ready(function () {
         $(window).scroll(function () {
@@ -311,8 +308,6 @@
 
 </script>
 <script src="styles/lib/slider.js"></script>
-
-
 <script src="script/team-rotation.js" ></script>
 </body>
 </html>
