--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
 </footer>
 
 <script src="lib/jquery-2.1.4.min.js"></script>
+
 <script>
     $(document).ready(function () {
         $(window).scroll(function () {
@@ -259,5 +260,6 @@
 
 <script src="script/team-rotation.js" ></script>
 <script src="script/game.js" ></script>
+<script src="script/mechanizm.gen.js"></script>
 </body>
 </html>
