uruchomienie gry cz.2

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                     <p id="game-instruction"> Instrukcja </p>
                     <img id="game-arrow" src="images/arrows.png" >
                 </div>
+                <div id="gameZone"></div>
             </div>
         </div>
     </section>
