--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div id="game-container">
                 <div id="game-start">
                     <span class="close">×</span>
-                    <h1 id="game-title"> Zbierz jak największą ilość jabłek</h1>
+                    <h1 id="game-title"> Zbierz jak największą ilość jabłek w wyznaczonym czasie.</h1>
                     <h2 id="game-title-2"> Aby zacząć wciśnij 'START'</h2>
                     <input id="game-button" type="submit" value="START">
                     <p id="game-instruction"> Instrukcja </p>
