kolizja elementow, zliczanie punktacji

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </ul>
     </nav>
 
-    <div id="intro">
+    <div id="intro" class="section">
         <div class="logo">
             <img class="logo" src="images/background/logo31.png" alt="logo">
         </div>
@@ -119,6 +119,7 @@
                 </div>
                 <div id="gameZone">
                     <h3 id="timer"></h3>
+                    <h3 id="game-score">Punkty: 0</h3>
                 </div>
             </div>
         </div>
